// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmCancelTrade should render correctly for buyer 1`] = `
<PeachText>
  Are you sure?

The seller has already matched you back, so canceling now will impact your reputation in a major way.
</PeachText>
`;

exports[`ConfirmCancelTrade should render correctly for buyer with cash trade 1`] = `
<PeachText>
  Are you sure? This will not affect your reputation.
</PeachText>
`;

exports[`ConfirmCancelTrade should render correctly for seller 1`] = `
<PeachText>
  Are you sure? Canceling a trade will negatively impact your reputation.

The buyer also needs to agree to cancel the trade, since they might have already made the payment.
</PeachText>
`;

exports[`ConfirmCancelTrade should render correctly for seller with cash trade 1`] = `
<PeachText>
  Are you sure? This will not affect your reputation.
</PeachText>
`;
